# pi-tag-detector

./: AbstractFiducialModel.cpp  AbstractFiducialModel.h  CMakeLists.txt  FiducialDefines.h  FiducialModelPi.cpp  FiducialModelPi.h  FiducialPiParameters.h  ellipserefine.cpp  ellipserefine.hpp  pitag-test.cpp  readme.md
markers/: tag0.xml
